Ajout de la partie back pour l'inscription d'un provaider

--- a/subscribe-ngo.html
+++ b/subscribe-ngo.html
@@ -30,7 +30,7 @@
 
 
     <!-- Masthead -->
-    <header class="masthead text-white text-center" style="background-image:url('./assets/img/clocks.jpg');">
+    <header class="masthead text-white text-center" style="background-image:url('./assets/img/asia-child.jpg');">
           <!-- Navigation -->
       <nav class="navbar navbar-dark static-top">
         <div class="container">
