--- a/subscribe-volunteer.html
+++ b/subscribe-volunteer.html
@@ -53,7 +53,8 @@
                 <form id="contact-form" method="POST" action="contact.php" role="form">
                     <div class="form-row">
                     <div class="col-12 col-md-9 mb-2 mb-md-0">
-                        <input type="email" class="form-control form-control-lg" placeholder="Email...">
+                        <label for="email" style="display:none"></label>
+                        <input id="email" name="email" type="email" class="form-control form-control-lg" placeholder="Email...">
                     </div>
                     <div class="col-12 col-md-3">
                         <button type="submit" class="btn btn-block btn-lg btn-primary">S'incrire</button>
@@ -180,7 +181,8 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    <!-- JQuery script for the subscribtion form-->
+    <script src="js/contact.js"></script>
   </body>
 
 </html>
