--- a/subscribe-ngo.html
+++ b/subscribe-ngo.html
@@ -16,8 +16,6 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
@@ -51,18 +49,20 @@
           </div>
         </div>
         <div class="row cta">
-            <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-                <form>
-                    <div class="form-row">
-                    <div class="col-12 col-md-9 mb-2 mb-md-0">
-                        <input type="email" class="form-control form-control-lg" placeholder="Email...">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <button type="submit" class="btn btn-block btn-lg btn-primary">S'inscrire</button>
-                    </div>
-                    </div>
-                </form>
-            </div>
+          <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+            <form id="contact-form" method="POST" action="contact-NGO.php" role="form">
+              <div class="toasts"></div>
+              <div class="form-row">
+                <div class="col-12 col-md-9 mb-2 mb-md-0">
+                    <label for="email" style="display:none"></label>
+                    <input id="email" name="email" type="email" class="form-control form-control-lg" placeholder="Email...">
+                </div>
+                <div class="col-12 col-md-3">
+                    <button type="submit" class="btn btn-block btn-lg btn-primary">S'inscrire</button>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
         <div class="row change-role">
                 <div class="col-md-10 mx-auto">
@@ -72,6 +72,79 @@
       </div>
     </header>
 
+    <!-- Icons Grid -->
+    <section class="features-icons bg-light text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+              <div class="features-icons-icon d-flex">
+                  <img 
+                  src="./assets/icons/world.svg" 
+                  alt="International"
+                  height="87px"
+                  width="100px" />
+              </div>
+              <h2>Internationale</h2>
+              <p class="lead mb-0">Trouvez des missions adaptées à vos compétences dans le monde entier.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+              <div class="features-icons-icon d-flex">
+                  <img 
+                  src="./assets/icons/network.svg" 
+                  alt="Centralisé"
+                  height="87px"
+                  width="100px" />
+              </div>
+              <h3>Centralisée</h3>
+              <p class="lead mb-0">Nous avons pour mission de recenser l'ensemble des missions humanitaires.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+              <div class="features-icons-icon d-flex">
+                  <img 
+                  src="./assets/icons/safe.svg" 
+                  alt="Sécurisé"
+                  height="87px"
+                  width="100px" />
+              </div>
+              <h3>Sécurisée</h3>
+              <p class="lead mb-0">Nous vous garantissons des missions auprès d'ONG reconnues pour la qualité de leur travail.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Image Showcases -->
+    <section class="showcase">
+      <div class="container-fluid p-0">
+        <div class="row no-gutters">
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('./assets/img/india.jpg');"></div>
+          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+            <h2>Une plateforme internationale</h2>
+            <p class="lead mb-0">Parce que la solidarité ne doit pas connaître de frontière, nous opérons dans le monde entier pour mettre en relation des volontaires et des associations. </p>
+          </div>
+        </div>
+        <div class="row no-gutters">
+            <div class="col-lg-6 text-white showcase-img" style="background-image: url('./assets/img/desert.jpg');"></div>
+          <div class="col-lg-6 my-auto showcase-text">
+            <h2>Des ONG locales</h2>
+            <p class="lead mb-0">Afin d'agir au plus près des populations concernées, nous vous mettons en relation avec des ONG et des associations qui connaissent parfaitement le contexte local.</p>
+          </div>
+        </div>
+        <div class="row no-gutters">
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('./assets/img/meditation.jpg');"></div>
+          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+            <h2>Des volontaires sérieux et impliqués</h2>
+            <p class="lead mb-0">Pour optimiser l'efficacité des missions, nous nous assurons que chaque volontaire est sérieux et motivé. </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  
    
 
     <!-- Footer -->
@@ -125,6 +198,8 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <!-- JQuery script for the subscribtion form-->
+    <script src="js/contact-ngo.js"></script>
   </body>
 
 </html>
