--- a/subscribe-volunteer.html
+++ b/subscribe-volunteer.html
@@ -52,10 +52,10 @@
             <form id="contact-form" method="POST" action="contact.php" role="form">
               <div class="toasts"></div>
               <div class="form-row">
-                <div class="col-12 col-md-9 mb-2 mb-md-0">
-                    
+                <div class="col-12 col-md-9 mb-2 mb-md-0">          
                     <label for="email" style="display:none"></label>
                     <input id="email" name="email" type="email" class="form-control form-control-lg" placeholder="Email...">
+                    <input type="hidden" id="subscriptionType" name="subscriptionType" value="VOL">
                 </div>
                 <div class="col-12 col-md-3">
                     <button type="submit" class="btn btn-block btn-lg btn-primary">S'incrire</button>
