--- a/subscribe-volunteer.html
+++ b/subscribe-volunteer.html
@@ -49,7 +49,7 @@
         
         <div class="row cta">
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto"> 
-            <form id="contact-form" method="POST" action="contact.php" role="form">
+            <form id="contact-form" method="POST" action="subscribe.php" role="form">
               <div class="toasts"></div>
               <div class="form-row">
                 <div class="col-12 col-md-9 mb-2 mb-md-0">          
@@ -203,7 +203,7 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- JQuery script for the subscribtion form-->
-    <script src="js/contact.js"></script>
+    <script src="js/subscribe.js"></script>
   </body>
 
 </html>
