--- a/subscribe-volunteer.html
+++ b/subscribe-volunteer.html
@@ -163,7 +163,7 @@
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
-                <a href="#">Contact</a>
+                <a href="./contact.html">Contact</a>
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
