Ajout de la privacy policy, de la checkbox de consentement, du wording de désinscription et du favicon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <link rel="alternate" hreflang="en" href="#" > 
     <link rel="alternate" hreflang="es" href="#" > 
     <title>Provaid - Humanitaire et volontariat international</title>
-
+		<link rel="shortcut icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="./assets/favicon/favicon.png" type="image/png">
+		<link rel="icon" sizes="32x32" href="./assets/favicon/favicon-32.png" type="image/png">
+		<link rel="icon" sizes="64x64" href="./assets/favicon/favicon-64.png" type="image/png">
+		<link rel="icon" sizes="96x96" href="./assets/favicon/favicon-96.png" type="image/png">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -67,19 +71,11 @@
           <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
             <ul class="list-inline mb-2">
               <li class="list-inline-item">
-                <a href="#">A propos</a>
-              </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
                 <a href="./contact.html">Contact</a>
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
-                <a href="#">CGU</a>
-              </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                <a href="#">Politique de confidentialité</a>
+                <a href="./privacy-policy.html">Politique de confidentialité</a>
               </li>
             </ul>
             <p class="text-muted small mb-4 mb-lg-0">&copy; Provaid.com 2019. All Rights Reserved.</p>
