--- a/subscribe-volunteer.html
+++ b/subscribe-volunteer.html
@@ -59,7 +59,7 @@
 							<div class="form-row">
 								<div class="col-12 col-md-9 mb-2 mb-md-0">
 									<label for="email" style="display:none"></label>
-									<input id="email" name="email" type="email" class="form-control form-control-lg" placeholder="Email...">
+									<input id="email" name="email" type="email" class="form-control form-control-lg" placeholder="Email..." required="required">
 									<input type="hidden" id="subscriptionType" name="subscriptionType" value="VOL">
 								</div>
 								<div class="col-12 col-md-3">
