added back scripts

--- a/subscribe-ngo.html
+++ b/subscribe-ngo.html
@@ -62,7 +62,7 @@
 									<label for="email" style="display:none"></label>
 									<input id="email" name="email" type="email" class="form-control form-control-lg" placeholder="Email..."
 									 required="required">
-									<input type="hidden" id="subscriptionType" name="subscriptionType" value="NGO">
+									<input type="hidden" id="subscriptionType" name="subscriptionType" value="ngo">
 								</div>
 								<div class="col-12 col-md-3">
 									<button type="submit" class="btn btn-block btn-lg btn-primary">S'inscrire</button>
