--- a/subscribe-volunteer.html
+++ b/subscribe-volunteer.html
@@ -60,7 +60,7 @@
 								<div class="col-12 col-md-9 mb-2 mb-md-0">
 									<label for="email" style="display:none"></label>
 									<input id="email" name="email" type="email" class="form-control form-control-lg" placeholder="Email..." required="required">
-									<input type="hidden" id="subscriptionType" name="subscriptionType" value="VOL">
+									<input type="hidden" id="subscriptionType" name="subscriptionType" value="vol">
 								</div>
 								<div class="col-12 col-md-3">
 									<button type="submit" class="btn btn-block btn-lg btn-primary">S'incrire</button>
