--- a/subscribe-ngo.html
+++ b/subscribe-ngo.html
@@ -5,8 +5,8 @@
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		<meta name="author" content="">
+		<meta name="description" content="Trouver des volontaires pour une mission humanitaire.">
+		<meta name="author" content="Provaid">©
 		<link rel="alternate" hreflang="fr" href="#">
 		<link rel="alternate" hreflang="en" href="#">
 		<link rel="alternate" hreflang="es" href="#">
