--- a/subscribe-ngo.html
+++ b/subscribe-ngo.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="Trouver des volontaires pour une mission humanitaire.">
 		<meta name="author" content="Provaid">©
-		<link rel="alternate" hreflang="fr" href="#">
+		<link rel="alternate" hreflang="fr" href="http://wwww.Provaid.com/fr/subscribe-ngo.html">
 		<link rel="alternate" hreflang="en" href="#">
 		<link rel="alternate" hreflang="es" href="#">
 		<title>Provaid - Humanitaire et volontariat international</title>
