--- a/privacy-policy-es.html
+++ b/privacy-policy-es.html
@@ -7,9 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="alternate" hreflang="fr" href="#">
-        <link rel="alternate" hreflang="en" href="#">
-        <link rel="alternate" hreflang="es" href="#">
+        <link rel="alternate" hreflang="fr" href="http://wwww.Provaid.com/fr/privacy-policy.html">
+        <link rel="alternate" hreflang="en" href="http://wwww.Provaid.com/fr/privacy-policy-en.html">
+        <link rel="alternate" hreflang="es" href="http://wwww.Provaid.com/fr/privacy-policy-es.html">
         <title>Provaid - Humanitaire et volontariat international</title>
 		<link rel="shortcut icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="./assets/favicon/favicon.png" type="image/png">
