Ajout du https et css min

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Trouver une mission humanitaire à l'international. Nous contruisons la plus grande plateforme de mise en relation entre volontaire et ONG. ">
     <meta name="author" content="">
-    <link rel="alternate" hreflang="fr" href="http://wwww.Provaid.com/fr/index.html" > 
+    <link rel="alternate" hreflang="fr" href="https://wwww.provaid.com/index.html" > 
     <link rel="alternate" hreflang="en" href="#" > 
     <link rel="alternate" hreflang="es" href="#" > 
     <title>Provaid - Humanitaire et volontariat international</title>
@@ -23,7 +23,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
-    <link href="css/landing-page.css" rel="stylesheet">
+    <link href="css/landing-page.min.css" rel="stylesheet">
 
   </head>
 
@@ -36,7 +36,7 @@
           <!-- Navigation -->
       <nav class="navbar navbar-dark static-top">
         <div class="container">
-          <h1 class="navbar-brand"><a>Prov<i>a</i>id<i>.com</i></a></h1>
+          <h2 class="navbar-brand"><a>Prov<i>a</i>id<i>.com</i></a></h2>
           <p><a href="#">EN</a> &middot <a href="#" class="active">FR</a> &middot <a href="#">ES</a></p>
         </div>
       </nav>
