Ajustements front pour la page 404

--- a/error/error_404.html
+++ b/error/error_404.html
@@ -11,20 +11,20 @@
         <link rel="alternate" hreflang="en" href="http://wwww.Provaid.com/fr/privacy-policy-en.html">
         <link rel="alternate" hreflang="es" href="http://wwww.Provaid.com/fr/privacy-policy-es.html">
         <title>Provaid - Humanitaire et volontariat international</title>
-		<link rel="shortcut icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="./assets/favicon/favicon.png" type="image/png">
-		<link rel="icon" sizes="32x32" href="./assets/favicon/favicon-32.png" type="image/png">
-		<link rel="icon" sizes="64x64" href="./assets/favicon/favicon-64.png" type="image/png">
-		<link rel="icon" sizes="96x96" href="./assets/favicon/favicon-96.png" type="image/png">
+		<link rel="shortcut icon" href="../assets/favicon/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../assets/favicon/favicon.png" type="image/png">
+		<link rel="icon" sizes="32x32" href="../assets/favicon/favicon-32.png" type="image/png">
+		<link rel="icon" sizes="64x64" href="../assets/favicon/favicon-64.png" type="image/png">
+		<link rel="icon" sizes="96x96" href="../assets/favicon/favicon-96.png" type="image/png">
         <!-- Bootstrap core CSS -->
-        <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom fonts for this template -->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
             type="text/css">
 
         <!-- Custom styles for this template -->
-        <link href="css/landing-page.min.css" rel="stylesheet">
+        <link href="../css/landing-page.min.css" rel="stylesheet">
 
     </head>
 
@@ -33,14 +33,20 @@
         <!-- Navigation -->
         <nav class="navbar navbar-light static-top bg-dark position-fixed zindex-fixed">
             <div class="container">
-                <h1 class="navbar-brand"><a href="./index.html">Prov<i>a</i>id<i>.com</i></a></h1>
+                <h1 class="navbar-brand"><a href="../index.html">Prov<i>a</i>id<i>.com</i></a></h1>
                 <p><a href="#">EN</a> &middot <a href="#" class="active">FR</a> &middot <a href="#">ES</a></p>
             </div>
         </nav>
 
         <!-- Image Showcases -->
         <section class="showcase">
-            <h1>ERROR 404</h1>
+            <div class="container-fluid p-0">
+                <div class="row no-gutters">
+                        <div class="col-lg-10 order-lg-1 mx-auto my-auto showcase-text">
+                                <h1>ERROR 404</h1>
+                        </div>
+                </div>
+            </div>
         </section>
 
 
@@ -52,15 +58,11 @@
                     <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
                         <ul class="list-inline mb-2">
                             <li class="list-inline-item">
-                                <a href="./contact.html">Contact</a>
+                                <a href="../contact.html">Contact</a>
                             </li>
                             <li class="list-inline-item">&sdot;</li>
                             <li class="list-inline-item">
-                                <a href="./CGU.html">CGU</a>
-                            </li>
-                            <li class="list-inline-item">&sdot;</li>
-                            <li class="list-inline-item">
-                                <a href="./privacy-policy.html">Politique de confidentialité</a>
+                                <a href="../privacy-policy.html">Politique de confidentialité</a>
                             </li>
                         </ul>
                         <p class="text-muted small mb-4 mb-lg-0">&copy; Provaid.com 2019. All Rights Reserved.</p>
